--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
     <nav>
         <div class="logo">InsightBase Solutions</div>
+        <div><img src="{{ url_for('static', filename='images/logo.png') }}" alt="Left" class="logo-left"></div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#services">Services</a></li>
